--- a/app/content-ingestion/webapp/test/flpSandbox.html
+++ b/app/content-ingestion/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "comscbtreasurycontentingestion-tile": {
+                "comscbtreasurycontentingestionfa-tile": {
                     title: "Content Ingestion",
                     description: "An SAP Fiori application.",
-                    additionalInformation: "SAPUI5.Component=com.scb.treasury.contentingestion",
+                    additionalInformation: "SAPUI5.Component=com.scb.treasury.contentingestionfa",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"com.scb.treasury.contentingestion": "../"}'
+        data-sap-ui-resourceroots='{"com.scb.treasury.contentingestionfa": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
