--- a/app/treasuryui/webapp/test/flpSandbox.html
+++ b/app/treasuryui/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "treasuryui-display": {
+                "treasuryuiFA-display": {
                     title: "Treasury",
                     description: "An SAP Fiori application.",
-                    additionalInformation: "SAPUI5.Component=treasuryui",
+                    additionalInformation: "SAPUI5.Component=treasuryuiFA",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"treasuryui": "../"}'
+        data-sap-ui-resourceroots='{"treasuryuiFA": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
