--- a/app/content-ingestion/webapp/test/integration/opaTests.qunit.html
+++ b/app/content-ingestion/webapp/test/integration/opaTests.qunit.html
@@ -8,7 +8,7 @@
             src="/resources/sap-ui-core.js"
             data-sap-ui-theme='sap_fiori_3'
             data-sap-ui-resourceroots='{
-                "com.scb.treasury.contentingestion": "../../"
+                "com.scb.treasury.contentingestionfa": "../../"
             }'
             data-sap-ui-animation="false"
             data-sap-ui-compatVersion="edge"
